fable/test/syntax_error/power_no_base.f
      program prog
      x = **3.4
      end
